{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 129,
  "lineage": "fd3e0100-dd6e-604e-7758-8253267cd3aa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.232.200.166",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-05T15:13:01.399-07:00",
            "id": "projects/infraoptimize2023/regions/us-central1/addresses/static-ip-0",
            "name": "static-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infraoptimize2023",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/regions/us-central1/addresses/static-ip-0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.135.89.122",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-05T15:13:00.398-07:00",
            "id": "projects/infraoptimize2023/regions/us-central1/addresses/static-ip-1",
            "name": "static-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infraoptimize2023",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/regions/us-central1/addresses/static-ip-1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "34.121.6.152",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-05T15:13:00.295-07:00",
            "id": "projects/infraoptimize2023/regions/us-central1/addresses/static-ip-2",
            "name": "static-ip-2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infraoptimize2023",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/regions/us-central1/addresses/static-ip-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/instanceGroups/my-vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-06-05T15:13:58.116-07:00",
            "enable_cdn": false,
            "fingerprint": "6YwhqOm2eM4=",
            "generated_id": 6931413358668406985,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/httpHealthChecks/my-health-check"
            ],
            "id": "projects/infraoptimize2023/global/backendServices/my-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-backend-service",
            "port_name": "http",
            "project": "infraoptimize2023",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/backendServices/my-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-05T15:13:00.390-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infraoptimize2023/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/networks/default",
            "priority": 1000,
            "project": "infraoptimize2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/firewalls/allow-http",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-http"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-05T15:13:00.363-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infraoptimize2023/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/networks/default",
            "priority": 1000,
            "project": "infraoptimize2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/firewalls/allow-https",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-https"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-05T15:13:00.390-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infraoptimize2023/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/networks/default",
            "priority": 1000,
            "project": "infraoptimize2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/firewalls/allow-ssh",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-ssh"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/infraoptimize2023/global/forwardingRules/my-forwarding-rule",
            "ip_address": "34.36.0.135",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-forwarding-rule",
            "port_range": "80-80",
            "project": "infraoptimize2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/forwardingRules/my-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/targetHttpProxies/my-http-proxy"
          },
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20230605",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/disks/instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infraoptimize2023/zones/us-central1-b/instances/instance-1",
            "instance_id": "8655465866107020050",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "QujprCIvqm0=",
            "name": "instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.232.200.166",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/networks/default",
                "network_ip": "10.128.0.16",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infraoptimize2023"
              }
            ],
            "project": "infraoptimize2023",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/instances/instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_address.static_ips"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20230605",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/disks/instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infraoptimize2023/zones/us-central1-b/instances/instance-2",
            "instance_id": "4798046688349774610",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "QujprCIvqm0=",
            "name": "instance-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.135.89.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/networks/default",
                "network_ip": "10.128.0.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infraoptimize2023"
              }
            ],
            "project": "infraoptimize2023",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/instances/instance-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_address.static_ips"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20230605",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/disks/instance-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infraoptimize2023/zones/us-central1-b/instances/instance-3",
            "instance_id": "8314920597856707347",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "QujprCIvqm0=",
            "name": "instance-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.6.152",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/networks/default",
                "network_ip": "10.128.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infraoptimize2023"
              }
            ],
            "project": "infraoptimize2023",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/zones/us-central1-b/instances/instance-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_address.static_ips"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-05T15:14:24.585-07:00",
            "id": "projects/infraoptimize2023/global/targetHttpProxies/my-http-proxy",
            "name": "my-http-proxy",
            "project": "infraoptimize2023",
            "proxy_bind": false,
            "proxy_id": 6584955483819597999,
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/targetHttpProxies/my-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/urlMaps/my-url-map"
          },
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-05T15:14:22.079-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/backendServices/my-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "_2A2j5nVOfw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/infraoptimize2023/global/urlMaps/my-url-map",
            "map_id": 8100636046575001809,
            "name": "my-url-map",
            "path_matcher": [],
            "project": "infraoptimize2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraoptimize2023/global/urlMaps/my-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group"
          ]
        }
      ]
    }
  ]
}